Add auto-configuration for JdbcClient
Closes gh-36579